# copiloting

./: .devcontainer.json  .env.template  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.yaml  .rtx.toml  AGENTS.md  LICENSE  README.md  eslint.config.ts  index.js  index.ts  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  process.js  process.ts  pyproject.toml  quickstart-llms.ts  renovate.json  server.ts  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md  renovate.json  renovate.json5  settings.yml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  copilot-setup-steps.yaml  fro-bot-autoheal.yaml  fro-bot.yaml  renovate.yaml  update-repo-settings.yaml
course/: main.py
course/agents/handlers/: chat_model_start_handler.py
course/agents/tools/: sql.py
course/facts/: __init__.py  scores.ipynb
course/local-do/: AGENTS.md  pyproject.toml  readme.md
course/pdf-dist/: AGENTS.md  README.md  pyproject.toml
course/pdf-dist/app/celery/: __init__.py
course/pdf-dist/app/chat/: AGENTS.md  chat.py  create_embeddings.py  redis.py  score.py
course/pdf-dist/app/chat/callbacks/: stream.py
course/pdf-dist/app/chat/chains/: retrieval.py  streamable.py  traceable.py
course/pdf-dist/app/chat/embeddings/: openai.py
course/pdf-dist/app/chat/llms/: __init__.py  chat_openai.py
course/pdf-dist/app/chat/memory/: __init__.py  sql_memory.py  window_memory.py
course/pdf-dist/app/chat/memory/history/: sql_history.py
course/pdf-dist/app/chat/models/: __init__.py
course/pdf-dist/app/chat/tracing/: langfuse.py
course/pdf-dist/app/chat/vectorstores/: pinecone.py
course/pdf-dist/app/web/: AGENTS.md  __init__.py  files.py  hooks.py
course/pdf-dist/app/web/config/: __init__.py
course/pdf-dist/app/web/db/models/: base.py
course/pdf-dist/app/web/views/: auth_views.py  conversation_views.py  health_views.py  pdf_views.py
course/pdf-dist/client/: .gitignore  .prettierrc.yaml  AGENTS.md  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
course/pdf-dist/client/.svelte-kit/: ambient.d.ts  tsconfig.json
course/pdf-dist/client/.svelte-kit/types/src/routes/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/auth/signin/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/auth/signout/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/auth/signup/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/chat/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/documents/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/documents/[id]/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/documents/new/: $types.d.ts
course/pdf-dist/client/.svelte-kit/types/src/routes/scores/: $types.d.ts
course/pdf-dist/client/src/: app.css  app.html
course/pdf-dist/client/src/api/: axios.ts
course/pdf-dist/client/src/components/: Alert.svelte  AuthGuard.svelte  BarChart.svelte  Button.svelte  ErrorMessage.svelte  ErrorModal.svelte  FormGroup.svelte  Icon.svelte  Navbar.svelte  PdfViewer.svelte  Progress.svelte  TextInput.svelte
course/pdf-dist/client/src/components/auth/: AuthLinks.svelte
course/pdf-dist/client/src/components/chat/: AssistantMessage.svelte  ChatInput.svelte  ChatList.svelte  ChatPanel.svelte  ConversationSelect.svelte  PendingMessage.svelte  UserMessage.svelte
course/pdf-dist/client/src/routes/: +layout.svelte  +page.svelte
course/pdf-dist/client/src/routes/auth/signin/: +page.svelte
course/pdf-dist/client/src/routes/auth/signout/: +page.svelte
course/pdf-dist/client/src/routes/auth/signup/: +page.svelte
course/pdf-dist/client/src/routes/chat/: +page.svelte
course/pdf-dist/client/src/routes/documents/: +page.svelte  +page.ts
course/pdf-dist/client/src/routes/documents/[id]/: +page.svelte  +page.ts
course/pdf-dist/client/src/routes/documents/new/: +page.svelte
course/pdf-dist/client/src/routes/scores/: +page.svelte  +page.ts
course/pdf-dist/client/src/store/: auth.ts  documents.ts  errors.ts  role.ts  scores.ts  store.ts  writeable.ts
course/pdf-dist/client/src/store/chat/: index.ts  store.ts  stream.ts  sync.ts
course/pdf-dist/client/static/: spec.html  spec.yaml
course/sections/: AGENTS.md  README.md  pyproject.toml
course/sections/agents/: __init__.py
course/sections/agents/handlers/: chat_model_start_handler.py
course/sections/agents/tools/: report.py  sql.py
course/sections/chain/: __init__.py  main.py
course/sections/facts/: __init__.py  redundant_filter_retriever.py
course/sections/tchat/: __init__.py
course/tchat/: main.py
course/utilities/: __init__.py
tests/: conftest.py  test_app_factory.py  test_auth_views.py  test_config.py  test_health_views.py  test_hooks.py  test_models.py
tests/ts/: setup.test.ts
tutorials/: AGENTS.md  package.json  quickstart-llms.ts  tsconfig.json
