[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "copiloting"
version = "0.1.0"
description = "Some experiments with AI copilots"
authors = ["Marcus R. Brown <contact@marcusrbrown.com>"]
readme = "README.md"
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.main.dependencies]
pydantic = "1.10.13"
python-dotenv = "1.0.0"
openai = "0.28.1"
langchain = "0.0.331"
tiktoken = "0.5.1"

[tool.poetry.group.pdf-dist.dependencies]
pdf-dist = { path = "course/pdf-dist", develop = true }

[tool.poetry.group.sections.dependencies]
sections = { path = "course/sections", develop = true }

[tool.poetry.scripts]
agents = "course.sections.agents:main"
course = "course.sections.chain:main"
facts = "course.sections.facts:main"
facts-create-embeddings = "course.sections.facts:create_embeddings"
tchat = "course.sections.tchat:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
