[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "copiloting"
version = "0.1.0"
description = "Some experiments with AI copilots"
authors = ["Marcus R. Brown <contact@marcusrbrown.com>"]
readme = "README.md"
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.main.dependencies]
pydantic = "^2.10"
python-dotenv = "^1.0"
openai = "^2.0"
langchain = "^1.2"
langchain-openai = "^1.1"
langchain-community = ">=0.3,<1.0"
tiktoken = "^0.12"

[tool.poetry.group.pdf-dist.dependencies]
pdf-dist = { path = "course/pdf-dist", develop = true }

[tool.poetry.group.sections.dependencies]
sections = { path = "course/sections", develop = true }

[tool.poetry.scripts]
agents = "course.sections.agents:main"
course = "course.sections.chain:main"
facts = "course.sections.facts:main"
facts-create-embeddings = "course.sections.facts:create_embeddings"
tchat = "course.sections.tchat:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2"
matplotlib = "^3.10"
pytest = "^9.0.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow tests to import the Flask app from course/pdf-dist/app/
pythonpath = ["course/pdf-dist"]
