[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "local-do"
version = "0.1.0"
description = "Upload server for `pdf-dist`"
authors = []
readme = "readme.md"
packages = [{ include = "local_do", from = "app.py" }]

[tool.poetry.dependencies]
python = "3.13.0"
blinker = "1.9.0"
click = "8.3.1"
Flask = "2.3.3"
