[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-dist"
version = "0.1.0"
description = "PDF chat app"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "1.33.9"
botocore = "1.33.8"
celery = "5.3.6"
click = "8.1.7"
Flask = "2.3.3"
flask_sqlalchemy = "3.1.1"
flask_cors = "4.0.0"
Werkzeug = "2.3.8"
invoke = "2.2.0"
pinecone-client = "2.2.4"
pypdf = "3.17.0"
watchdog = "3.0.0"
uuid = "1.30"
langfuse = "1.13.0"
backoff = "2.2.1"
redis = "5.0.1"
