[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-dist"
version = "0.1.0"
description = "PDF chat app"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "3.11.7"
boto3 = "1.42.30"
botocore = "1.42.29"
celery = "5.6.2"
click = "8.3.1"
Flask = "2.3.3"
flask_sqlalchemy = "3.1.1"
flask_cors = "4.0.0"
Werkzeug = "2.3.8"
invoke = "2.2.1"
pinecone-client = "2.2.4"
pypdf = "3.17.4"
watchdog = "3.0.0"
uuid = "1.30"
langfuse = "1.14.0"
backoff = "2.2.1"
redis = "5.3.1"
