[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-dist"
version = "0.1.0"
description = "PDF chat app"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
boto3 = "^1.42"
botocore = "^1.42"
celery = "^5.6"
click = "^8.3"
Flask = "^3.1"
flask_sqlalchemy = "^3.1"
flask_cors = "^6.0"
Werkzeug = "^3.1"
invoke = "^2.2"
pinecone-client = "^2.2"
pypdf = "^6.9"
watchdog = "^6.0"
uuid = "^1.30"
langfuse = "^4.0"
backoff = "^2.2"
redis = "^5.3"
